--- a/src/app/features/meme-generator/meme-generator.component.html
+++ b/src/app/features/meme-generator/meme-generator.component.html
@@ -1,1 +1,1 @@
-<app-search-form (imageWord)='searchImage($event)'></app-search-form>
+<app-search-form (keyword)='searchImage($event)' [$searchEnd]='$searchEnd'çç></app-search-form>
