--- a/src/app/shared/components/search-form/search-form.component.html
+++ b/src/app/shared/components/search-form/search-form.component.html
@@ -6,4 +6,6 @@
   class="field"
   formControlName="image"
   >
+<app-button [label]="'search'" [temLoader]="true" (click)="onSubmit()"></app-button>
+`
 </form>
