--- a/src/app/shared/components/search-form/search-form.component.scss
+++ b/src/app/shared/components/search-form/search-form.component.scss
@@ -1,10 +1,14 @@
+
 :host{
-  width: 50%;
+  flex-basis: 80%;
 }
 
 .search-form {
+  display: flex;
+
   & > .field {
     padding: 10px;
     width: 100%;
+    margin-right: 12px;
   }
 }
