--- a/src/app/features/meme-generator/meme-generator.component.html
+++ b/src/app/features/meme-generator/meme-generator.component.html
@@ -1,1 +1,2 @@
 <app-search-form (keyword)='searchImage($event)' [$searchEnd]='$searchEnd'çç></app-search-form>
+<app-image-gallery [images]='images | async'></app-image-gallery>
