--- a/src/app/shared/components/image-gallery/image-gallery.component.html
+++ b/src/app/shared/components/image-gallery/image-gallery.component.html
@@ -1,2 +1,2 @@
-<app-image-gallery-item *ngFor="let image of images" [image]='image' ($select)='clearSelected()'>
+<app-image-gallery-item *ngFor="let image of images" [image]='image' ($select)='clearSelected($event)'>
 </app-image-gallery-item>
